--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -6,11 +6,17 @@ $font-text: "Inika", serif;
   justify-content: center;
   align-items: center;
   padding: 5%;
-  width: 80vw;
+  width: 100vw;
   height: 80vh;
   margin-inline: auto;
   margin-block: auto;
   gap: 5%;
+
+  &.dark-mode {
+    background-color: rgb(14, 13, 13);
+    color: rgb(240, 238, 238);
+  }
+
   .contact-left-section {
     display: flex;
     flex-direction: column;
@@ -55,22 +61,28 @@ $font-text: "Inika", serif;
     }
   }
   .contact-photo {
-    flex: 1;
+    flex: 1.5;
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
     animation: fadeInBottom 2s forwards;
     img {
       width: 90%;
       max-width: 400px;
-      margin-top: 20%;
+      margin-top: 10%;
+      margin-left: 10%;
     }
     p {
       font-family: $font-text;
       font-size: 1.5rem;
       font-weight: bold;
+      margin-left: 10%;
+      &.dark-mode {
+        color: rgb(240, 238, 238);
+      }
+    
     }
   }
 
@@ -160,6 +172,11 @@ $font-text: "Inika", serif;
       font-size: 1rem;
       cursor: pointer;
       transition: background-color 0.3s ease;
+
+      &.dark-mode {
+        color: rgb(247, 230, 230);
+        border: 2px solid rgb(247, 230, 230);;
+      }
 
       &:hover {
         background-color: #000000;
