add border color change to dark mode

--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -66,6 +66,7 @@ $font-text: "Inika", serif;
 
       &.dark-mode {
         color: white;
+        border-right: 2px solid white;
       }
 
       &:hover {
