--- a/frontend/src/components/hero/hero.scss
+++ b/frontend/src/components/hero/hero.scss
@@ -9,7 +9,7 @@ $font-text: "Inika", serif;
 
   &.dark-mode {
     background-color:  rgb(14, 13, 13);;
-    color:  rgb(247, 230, 230);
+    color:  #f7f2f2;
   }
 
   .left-section {
