--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -6,7 +6,7 @@ $font-text: "Inika", serif;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   &.dark-mode {
     background-color: rgb(14, 13, 13);
     color: white;
@@ -18,6 +18,11 @@ $font-text: "Inika", serif;
     display: flex;
     justify-content: center;
     z-index: 2;
+
+    @media (max-width: 600px) {
+      margin-top: 0px;
+      margin-bottom: 10%;
+    }
 
     .pagination-list {
       list-style-type: none;
@@ -96,7 +101,7 @@ $font-text: "Inika", serif;
     @media (max-width: 600px) {
       flex-direction: column;
       align-items: flex-start;
-      margin-top: 20px;
+      margin-top: 20%;
     }
   }
 
