--- a/frontend/src/components/about/about.scss
+++ b/frontend/src/components/about/about.scss
@@ -7,6 +7,8 @@ $font-text: "Inika", serif;
   gap: 10%;
   height: 100vh;
 
+
+
   &.dark-mode {
     background-color: rgb(14, 13, 13);
     color: white;
@@ -16,6 +18,10 @@ $font-text: "Inika", serif;
     flex-direction: column;
     align-items: center;
     gap: 5%;
+  }
+
+  @media (max-width: 768px) {
+    height: 100%;
   }
 
   .left-container {
