--- a/frontend/src/components/gallery/gallery.scss
+++ b/frontend/src/components/gallery/gallery.scss
@@ -7,10 +7,16 @@ $font-text: "Inika", serif;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  
   &.dark-mode {
     background-color: rgb(14, 13, 13);
     color: white;
   }
+  
+  @media (max-width: 768px) {
+    height: 100vh;
+  }
+
 
   // Pagination styles within the .gallery-section
   .pagination {
@@ -132,7 +138,7 @@ $font-text: "Inika", serif;
       --s: 40vw; 
       grid-template-columns: 1fr;
       width: calc(var(--s));
-      height: 550px;
+      height: 450px;
     }
   }
 
@@ -151,6 +157,7 @@ $font-text: "Inika", serif;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: hidden;
 
     &.placeholder {
       background-color: #e0e0e0;
