--- a/backend/src/views/index.ejs
+++ b/backend/src/views/index.ejs
@@ -18,7 +18,7 @@
       </p>
       <% } %>
 
-      <form method="GET" action="/arts" class="search-bar" id="filterForm">
+      <form method="GET" action="admin/arts" class="search-bar" id="filterForm">
         <input
           type="text"
           name="search"
@@ -72,12 +72,12 @@
               <% })%>
             </td>
             <td>
-              <a href="/arts/<%= art.id %>"
+              <a href="admin/arts/<%= art.id %>"
                 ><button class="edit">Edit</button></a
               >
               <form
                 id="delete-art-form"
-                action="/arts/<%= art.id %>?_method=DELETE"
+                action="admin/arts/<%= art.id %>?_method=DELETE"
                 method="POST"
                 style="display: inline"
               >
@@ -97,10 +97,10 @@
           <a class="disabled">&laquo; Previous</a>
         <% } %>
         <% for (let i = 1; i <= totalPages; i++) { %>
-          <a href="/arts?page=<%= i %>&search=<%= searchQuery %>&category=<%= category %>&featured=<%= featured %>" class="<%= i === currentPage ? 'active' : '' %>"><%= i %></a>
+          <a href="admin/arts?page=<%= i %>&search=<%= searchQuery %>&category=<%= category %>&featured=<%= featured %>" class="<%= i === currentPage ? 'active' : '' %>"><%= i %></a>
         <% } %>
         <% if (currentPage < totalPages) { %>
-          <a href="/arts?page=<%= currentPage + 1 %>&search=<%= searchQuery %>&category=<%= category %>&featured=<%= featured %>">Next &raquo;</a>
+          <a href="admin/arts?page=<%= currentPage + 1 %>&search=<%= searchQuery %>&category=<%= category %>&featured=<%= featured %>">Next &raquo;</a>
         <% } else { %>
           <a class="disabled">Next &raquo;</a>
         <% } %>
