--- a/backend/src/views/index.ejs
+++ b/backend/src/views/index.ejs
@@ -68,7 +68,7 @@
             <td><%= art.featured ? "Yes" : "No" %></td>
             <td>
               <%art.images?.map(img=> {%>
-              <img src="/uploads/<%=img%>" alt="art image" />
+              <img src="D:/WebServer/main/daria-portfolio-site/Content/uploads/<%=img%>" alt="art image" />
               <% })%>
             </td>
             <td>
