--- a/backend/src/views/messages.ejs
+++ b/backend/src/views/messages.ejs
@@ -25,7 +25,7 @@
             <td>
               <% message.attachments.forEach(attachment => { %>
               <img
-                src="/messageUploads/<%= attachment %>"
+                src="D:/WebServer/main/daria-portfolio-site/Content/messageUploads/<%= attachment %>"
                 alt="Attachment"
                 class="attachment-image"
                 class="attachment-image"
