cloudinary URLS - TEMPORARY

--- a/frontend/src/components/featured/featured.scss
+++ b/frontend/src/components/featured/featured.scss
@@ -139,7 +139,7 @@ $font-text: "Inika", serif;
     align-items: center;
     justify-content: center;
     // background: linear-gradient(90deg, snow 1px, #f0f0f0);
-    background-image: url("paper-texture.png");
+    background-image: url("https://res.cloudinary.com/dirwjcohx/image/upload/v1719769936/Daria/paper-texture_ps2yvo.png");
     background-position: center;
     background-size: 160% 150%;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
@@ -203,7 +203,7 @@ $font-text: "Inika", serif;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    background-image: url("cover-green-beige.png");
+    background-image: url("https://res.cloudinary.com/dirwjcohx/image/upload/v1719769937/Daria/cover-green_ulieqi.png");
     background-position: center;
     background-size: cover;
     // background-color: rgb(69, 204, 102);
@@ -215,7 +215,7 @@ $font-text: "Inika", serif;
       font-family: $font-text;
       color: rgb(0, 0, 0);
       // text-transform: uppercase;
-      background-image: url("23.png");
+      background-image: url("https://res.cloudinary.com/dirwjcohx/image/upload/v1719769937/Daria/23_bcevqm.png");
       background-position: left;
       background-size: cover;
       transform: skewY(-5deg);
