--- a/backend/src/views/create.ejs
+++ b/backend/src/views/create.ejs
@@ -66,7 +66,7 @@
         <label for="images">Upload image:</label>
         <input
           type="file"
-          name="images"
+          name="image"
           id="images"
           multiple
           onChange="previewImages(event)"
