--- a/backend/src/views/details.ejs
+++ b/backend/src/views/details.ejs
@@ -38,7 +38,7 @@
             <label>Images:</label>
             <div class="image-preview">
                 <% art.images.forEach(image => { %>
-                    <img src="/uploads/<%= image %>" alt="Artwork Image" class="preview-image">
+                    <img src="<%= image %>" alt="Artwork Image" class="preview-image">
                 <% }); %>
             </div>
             <div class="error-message" id="images-error"></div>
