--- a/backend/src/views/login.ejs
+++ b/backend/src/views/login.ejs
@@ -26,6 +26,8 @@
           </div>
           <button type="submit" class="login-button">Login</button>
         </form>
+
+        <a href="/login/edit">Change username or password</a>
       </div>
 </body>
 </html>
