--- a/frontend/src/components/hero/hero.scss
+++ b/frontend/src/components/hero/hero.scss
@@ -119,7 +119,7 @@ $font-text: "Inika", serif;
       font-size: 1.5rem;
       opacity: 0;
       animation: slideInBottomRight 1s forwards;
-      color: white;
+      color: black;
 
       &.dark-mode {
         color: rgb(247, 230, 230);
