--- a/frontend/src/components/hero/hero.scss
+++ b/frontend/src/components/hero/hero.scss
@@ -36,9 +36,10 @@ $font-text: "Inika", serif;
     .navbar {
       display: flex;
       justify-content: space-between;
-      position: relative;
+      position: absolute;
       top: -10px;
       font-size: 1.3rem;
+      z-index: 10;
       @media only screen and (max-width: 768px) {
         justify-content: left;
       }
@@ -77,7 +78,7 @@ $font-text: "Inika", serif;
       }
       h1 {
         margin-block: 10px;
-        font-size: 7rem;
+        font-size: 9vw;
         font-family: $font-main;
         animation: slideInRight 1s forwards;
         // -webkit-text-stroke: 0.5px white;
@@ -302,6 +303,7 @@ $font-text: "Inika", serif;
         display: none;
       }
       .titles {
+        width: 75vw;
         background: linear-gradient(
           rgba(255, 255, 255, 0.5),
           rgba(255, 255, 255, 0.5)
@@ -313,7 +315,7 @@ $font-text: "Inika", serif;
           font-size: 2rem;
         }
         h1 {
-          font-size: 6rem;
+          font-size: 15vw;
         }
       }
       .portfolio-link {
