--- a/frontend/src/components/navigation/navigation.scss
+++ b/frontend/src/components/navigation/navigation.scss
@@ -67,6 +67,8 @@ $font-text: "Inika", serif;
 
   .nav-items.open {
     display: flex;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding-top: 20px;
     top: -20%;
     left: 90%;
     gap: 10px;
